syntax = "proto3";
package pt.tecnico.distledger.contract.admin;

import "DistLedgerCommonDefinitions.proto";

// Administrator Interface of the DistLedger Service

message ActivateRequest {}

message ActivateResponse {}

message DeactivateRequest {}

message DeactivateResponse {}

message GossipRequest {}

message GossipResponse {}

message GetLedgerStateRequest {}

message GetLedgerStateResponse {
  LedgerState ledgerState = 1;
}

message ShutdownRequest {}

message ShutdownResponse {}

service AdminService {
  rpc activate(ActivateRequest) returns (ActivateResponse);
  rpc deactivate(DeactivateRequest) returns (DeactivateResponse);
  rpc gossip(GossipRequest) returns (GossipResponse);
  rpc getLedgerState(GetLedgerStateRequest) returns (GetLedgerStateResponse);
  rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
}
