syntax = "proto3";
package pt.tecnico.distledger.contract.namingserver;

// Naming Server Interface of the DistLedger Service

message RegisterRequest {
  string service = 1;
  string qualifier = 2;
  string target = 3;
}

message RegisterResponse {
  int32 assignedId = 1; // Unique ID in the service for the registered target
}

message DeleteRequest {
  string service = 1;
  string target = 2;
}

message DeleteResponse {}

message LookupRequest {
  string service = 1;
  string qualifier = 2;
}

message LookupResponse {
  message Entry {
    string qualifier = 1;
    string target = 2;
    int32 id = 3;
  }

  reserved 1; // previous version of the protocol used this field
  repeated Entry entries = 2;
}

service NamingService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
}
